--- a/roles/keycloak/tasks/demo-config.yml
+++ b/roles/keycloak/tasks/demo-config.yml
@@ -3,6 +3,10 @@
 - name: Connect to the server
   command: "{{keycloak_home}}/bin/kcadm.sh config credentials --server http://localhost:8080/auth --realm master --user admin --password admin"
 
+- name: Disable HTTPS
+  command: "{{keycloak_home}}/bin/kcadm.sh update realms/master -s sslRequired=NONE"
+  ignore_errors: yes
+
 - name: Create demo realm
   command: "{{keycloak_home}}/bin/kcadm.sh create realms -s realm=demo -s enabled=true"
   ignore_errors: yes
